# LipReading_CV

./: .gitignore  Makefile  README.md  pyproject.toml
data/model dataset/: labels.csv
data/model_dataset/: labels.csv
data/video data/: Oligarchs Are Our Modern Day Kings.srt  We Are Living in Unprecedented Times.srt  Where Do We Go From Here?.srt
data/video_data/: benchmark1.txt  benchmark1_aligned.srt
model/: video_classification.ipynb
src/: batch_process_crop_mouth.py  builddata.py  cnn.py  createFaceMask.py  crop_mouth.py  filterSmall.py  inspectClass.py  lower_face_landmarks.py  preprocess.py  runAlign.py  spline_face_mask.py
src/computer_vision_with_dl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
