[project]
name = "computer-vision-with-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "tensorflow>=2.19.0",
    "tensorflow-metal>=1.2.0",
]
